--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Practica01</title>
 </head>
 <body>
-    <h1>Esta es mi primera Practica con Githbu</h1>
+    <h1>Esta es mi primera Practica con Github</h1>
 </body>
 </html>
